--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.mywork</groupId>
-    <artifactId>Homework_2</artifactId>
+    <artifactId>Homework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
